--- a/GoIT/markup/js_19-20/client_src/template/content.html
+++ b/GoIT/markup/js_19-20/client_src/template/content.html
@@ -1,37 +1,40 @@
 <section>
     <div class="wrapper">
+
         <div class="slider">
             slider :)
         </div>
+
         <section class="intro">
             <div class="intro-article">
-                <span class="intro-article__number">01</span>
-                <div class="intro-article__inner">
+                <div class="intro-article__title">
+                    <span class="intro-article__number">01</span>
                     <h3 class="intro-article__header">Power Inside</h3>
-                    <p class="intro-article__text">Cum sociis natoque penatibus et magnis dis parturient montesmus. Pro vel nibh et elit mollis commodo et nec augueique Nemo enim ipsam voluptatem quia 
-ptas sit aspernatur samomo enim ipsam voluptatem.</p>
-                    <a href="#" class="intro-article__more">Read More</a>
                 </div>
+                <p class="intro-article__text">Cum sociis natoque penatibus et magnis dis parturient montesmus. Pro vel nibh et elit mollis commodo et nec augueique Nemo enim ipsam voluptatem quia 
+ptas sit aspernatur samomo enim ipsam voluptatem.</p>
+                <a href="#" class="intro-article__more">Read More</a>
             </div>
             <div class="intro-article">
-                <span class="intro-article__number">02</span>
-                <div class="intro-article__inner">
+                <div class="intro-article__title">
+                    <span class="intro-article__number">02</span>
                     <h3 class="intro-article__header">New Technologies</h3>
-                    <p class="intro-article__text">Cum sociis natoque penatibus et magnis dis parturient montesmus. Pro vel nibh et elit mollis commodo et nec augueique Nemo enim ipsam voluptatem quia 
-ptas sit aspernatur samomo enim ipsam voluptatem.</p>
-                    <a href="#" class="intro-article__more">Read More</a>
                 </div>
+                <p class="intro-article__text">Cum sociis natoque penatibus et magnis dis parturient montesmus. Pro vel nibh et elit mollis commodo et nec augueique Nemo enim ipsam voluptatem quia 
+ptas sit aspernatur samomo enim ipsam voluptatem.</p>
+                <a href="#" class="intro-article__more">Read More</a>
             </div>
             <div class="intro-article">
-                <span class="intro-article__number">03</span>
-                <div class="intro-article__inner">
+                <div class="intro-article__title">
+                    <span class="intro-article__number">03</span>
                     <h3 class="intro-article__header">Fast Support</h3>
-                    <p class="intro-article__text">Cum sociis natoque penatibus et magnis dis parturient montesmus. Pro vel nibh et elit mollis commodo et nec augueique Nemo enim ipsam voluptatem quia 
-ptas sit aspernatur samomo enim ipsam voluptatem.</p>
-                    <a href="#" class="intro-article__more">Read More</a>
                 </div>
+                <p class="intro-article__text">Cum sociis natoque penatibus et magnis dis parturient montesmus. Pro vel nibh et elit mollis commodo et nec augueique Nemo enim ipsam voluptatem quia 
+ptas sit aspernatur samomo enim ipsam voluptatem.</p>
+                <a href="#" class="intro-article__more">Read More</a>
             </div>
         </section>
+
     </div>
 </section>
 
@@ -42,7 +45,7 @@ ptas sit aspernatur samomo enim ipsam voluptatem.</p>
             <li class="services-article">
                 <a href="#" class="services-article__anchor">
                     <div class="services-article__outer-image">
-                        <div class="services-article__inner-image"><img src=""></div>
+                        <img src="" class="services-article__inner-image">
                     </div>
                     <p class="services-article__title">Schedule Services</p>
                 </a>
@@ -50,7 +53,7 @@ ptas sit aspernatur samomo enim ipsam voluptatem.</p>
             <li class="services-article">
                 <a href="#" class="services-article__anchor">
                     <div class="services-article__outer-image">
-                        <div class="services-article__inner-image"><img src=""></div>
+                        <img src="" class="services-article__inner-image">
                     </div>
                     <p class="services-article__title">Preventive Maintence</p>
                 </a>
@@ -58,7 +61,7 @@ ptas sit aspernatur samomo enim ipsam voluptatem.</p>
             <li class="services-article">
                 <a href="#" class="services-article__anchor">
                     <div class="services-article__outer-image">
-                        <div class="services-article__inner-image"><img src=""></div>
+                        <img src="" class="services-article__inner-image">
                     </div>
                     <p class="services-article__title">Tire &amp; Wheel Services</p>
                 </a>
@@ -75,12 +78,74 @@ ptas sit aspernatur samomo enim ipsam voluptatem.</p>
     </div>
 </section>
 
-
 <section class="latest-news">
-    
+    <div class="wrapper">
+        <div class="news">
+            <h2 class="news__header">Latest News</h2>
+
+            <div class="news__article">
+                <img src="img/latest-news-1.png" class="news__image">
+                <div class="news__dates">
+                    <p class="news__month">Jan</p>
+                    <p class="news__date">23</p>
+                </div>
+                <div class="news__preview">
+                    <h3><a href="#"  class="news__title">Advanced Machinery Helps Improve Quality</a></h3>
+                    <p class="news__description">
+                        <span>by</span>
+                        <a href="#" class="news__author">cmsmasters</a>
+                        <span>Comments (</span>
+                        <a href="#" class="news__comments">6</a>
+                        <span>)</span>
+                    </p>
+                    <p class="news__text">Cum sociis natoque penatibus et magnis dis parturient ontesmus. Pro vel nibh et elit mollis commodo et nec augueique Nemo enim ipsam voluptatem quia ptas sit aspernatur samomo enim ipsam voluptatem.</p>
+                </div>
+            </div>
+
+            <div class="news__article">
+                <img src="img/latest-news-2.png" class="news__image">
+                <div class="news__dates">
+                    <p class="news__month">Jan</p>
+                    <p class="news__date">21</p>
+                </div>
+                <div class="news__preview">
+                    <h3><a href="#"  class="news__title">Powerful Techniques for Advanced Service</a></h3>
+                    <p class="news__description">
+                        <span>by</span>
+                        <a href="#" class="news__author">cmsmasters</a>
+                        <span>Comments (</span>
+                        <a href="#" class="news__comments">3</a>
+                        <span>)</span>
+                    </p>
+                    <p class="news__text">Cum sociis natoque penatibus et magnis dis parturient ontesmus. Pro vel nibh et elit mollis commodo et nec augueique Nemo enim ipsam voluptatem quia ptas sit aspernatur samomo enim ipsam voluptatem.</p>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="banners">
+            <h2 class="banners__header">Banners Place</h2>
+            <div class="banners__panel banners__panel--active"><span class="banners__title">Accordion Panel 1</span></div>
+            <p class="banners__text banners__text--active">Cum sociis natoque penatibus et magnis dis parturient mus. Pro vel nibh et elit mollis commodo et nec augueique Nemo enim ipsam voluptatem quia ptas sit aspernatur momo. Cum sociis natoque penatibus et magnis dis parturient ontesmus. Nemo enim ipsam voluptatem quia ptas sit aspernatur samomoPro vel nibh et elit mollis commodo et nec augueique Nemo enim ipsam voluptatem quia ptas sit aspernatur </p>
+            <div class="banners__panel"><span class="banners__title">Accordion Panel 2</span></div>
+            <p class="banners__text">Cum sociis natoque penatibus et magnis dis parturient mus. Pro vel nibh et elit mollis commodo et nec augueique Nemo enim ipsam voluptatem quia ptas sit aspernatur momo. Cum sociis natoque penatibus et magnis dis parturient ontesmus. Nemo enim ipsam voluptatem quia ptas sit aspernatur samomoPro vel nibh et elit mollis commodo et nec augueique Nemo enim ipsam voluptatem quia ptas sit aspernatur </p>
+            <div class="banners__panel"><span class="banners__title">Accordion Panel 3</span></div>
+            <p class="banners__text">Cum sociis natoque penatibus et magnis dis parturient mus. Pro vel nibh et elit mollis commodo et nec augueique Nemo enim ipsam voluptatem quia ptas sit aspernatur momo. Cum sociis natoque penatibus et magnis dis parturient ontesmus. Nemo enim ipsam voluptatem quia ptas sit aspernatur samomoPro vel nibh et elit mollis commodo et nec augueique Nemo enim ipsam voluptatem quia ptas sit aspernatur </p>
+            <div class="banners__panel"><span class="banners__title">Accordion Panel 4</span></div>
+            <p class="banners__text">Cum sociis natoque penatibus et magnis dis parturient mus. Pro vel nibh et elit mollis commodo et nec augueique Nemo enim ipsam voluptatem quia ptas sit aspernatur momo. Cum sociis natoque penatibus et magnis dis parturient ontesmus. Nemo enim ipsam voluptatem quia ptas sit aspernatur samomoPro vel nibh et elit mollis commodo et nec augueique Nemo enim ipsam voluptatem quia ptas sit aspernatur </p>
+        </div>
+    </div>
 </section>
 
-
 <section class="anchors">
-    
+    <div class="wrapper">
+        <ul class="menu-anchors">
+            <li class="menu-anchors__item"><a href="#" class="menu-anchors__link"></a></li>
+            <li class="menu-anchors__item"><a href="#" class="menu-anchors__link"></a></li>
+            <li class="menu-anchors__item"><a href="#" class="menu-anchors__link"></a></li>
+            <li class="menu-anchors__item"><a href="#" class="menu-anchors__link"></a></li>
+            <li class="menu-anchors__item"><a href="#" class="menu-anchors__link"></a></li>
+            <li class="menu-anchors__item"><a href="#" class="menu-anchors__link"></a></li>
+        </ul>
+    </div>
 </section>
