JS#19-20. Finished markup. Started JS homework.

--- a/GoIT/markup/js_19-20/client_src/scss/main.scss
+++ b/GoIT/markup/js_19-20/client_src/scss/main.scss
@@ -4,6 +4,7 @@
 
 @import "../libs/reset-css/_reset";
 @import "../libs/fa-scss-plus/_fontawesome";
+@import "../libs/FlexSlider-Scss/flexslider.scss";
 
 /*
  * Custom
