--- a/GoIT/markup/js_19-20/client_src/template/content.html
+++ b/GoIT/markup/js_19-20/client_src/template/content.html
@@ -2,12 +2,24 @@
     <div class="wrapper">
 
         <div class="slider">
-            slider :)
+            <div class="flexslider">
+                <ul class="slides">
+                    <li>
+                        <img src="img/slide-1.png" />
+                    </li>
+                    <li>
+                        <img src="img/slide-2.jpg" />
+                    </li>
+                    <li>
+                        <img src="img/slide-3.jpg" />
+                    </li>
+                </ul>
+            </div>
         </div>
 
         <section class="intro">
             <div class="intro-article">
-                <div class="intro-article__title">
+                <div class="intro-article__title intro-article__title--1">
                     <span class="intro-article__number">01</span>
                     <h3 class="intro-article__header">Power Inside</h3>
                 </div>
@@ -16,7 +28,7 @@ ptas sit aspernatur samomo enim ipsam voluptatem.</p>
                 <a href="#" class="intro-article__more">Read More</a>
             </div>
             <div class="intro-article">
-                <div class="intro-article__title">
+                <div class="intro-article__title intro-article__title--2">
                     <span class="intro-article__number">02</span>
                     <h3 class="intro-article__header">New Technologies</h3>
                 </div>
@@ -25,7 +37,7 @@ ptas sit aspernatur samomo enim ipsam voluptatem.</p>
                 <a href="#" class="intro-article__more">Read More</a>
             </div>
             <div class="intro-article">
-                <div class="intro-article__title">
+                <div class="intro-article__title intro-article__title--3">
                     <span class="intro-article__number">03</span>
                     <h3 class="intro-article__header">Fast Support</h3>
                 </div>
@@ -45,7 +57,7 @@ ptas sit aspernatur samomo enim ipsam voluptatem.</p>
             <li class="services-article">
                 <a href="#" class="services-article__anchor">
                     <div class="services-article__outer-image">
-                        <img src="" class="services-article__inner-image">
+                        <div class="services-article__inner-image services-article__inner-image--1"></div>
                     </div>
                     <p class="services-article__title">Schedule Services</p>
                 </a>
@@ -53,7 +65,7 @@ ptas sit aspernatur samomo enim ipsam voluptatem.</p>
             <li class="services-article">
                 <a href="#" class="services-article__anchor">
                     <div class="services-article__outer-image">
-                        <img src="" class="services-article__inner-image">
+                        <div class="services-article__inner-image services-article__inner-image--2"></div>
                     </div>
                     <p class="services-article__title">Preventive Maintence</p>
                 </a>
@@ -61,7 +73,7 @@ ptas sit aspernatur samomo enim ipsam voluptatem.</p>
             <li class="services-article">
                 <a href="#" class="services-article__anchor">
                     <div class="services-article__outer-image">
-                        <img src="" class="services-article__inner-image">
+                        <div class="services-article__inner-image services-article__inner-image--3"></div>
                     </div>
                     <p class="services-article__title">Tire &amp; Wheel Services</p>
                 </a>
@@ -69,7 +81,7 @@ ptas sit aspernatur samomo enim ipsam voluptatem.</p>
             <li class="services-article">
                 <a href="#" class="services-article__anchor">
                     <div class="services-article__outer-image">
-                        <div class="services-article__inner-image"><img src=""></div>
+                        <div class="services-article__inner-image services-article__inner-image--4"></div>
                     </div>
                     <p class="services-article__title">Repair Services</p>
                 </a>
