--- a/GoIT/markup/js_19-20/client_src/scss/_variables.scss
+++ b/GoIT/markup/js_19-20/client_src/scss/_variables.scss
@@ -13,8 +13,6 @@ a {
   text-decoration: none;
 }
 
-
-
 // colors
 
 $logo-header-color: #434343;
@@ -29,13 +27,61 @@ $darkest-gray: #2a2b2e;
 $almost-black: #181a1d;
 $yellow: #f4b60d;
 $blue: #248cec;
-
 $news-description-color: #9d9d9d;
 
 // fonts
 
+// flexslider.scss string 13 - changed 'fonts' to '../fonts'
 
+@font-face {
+    font-family: 'ubuntu';
+    src: url('../fonts/ubuntu-r-webfont.eot');
+    src: url('../fonts/ubuntu-r-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/ubuntu-r-webfont.woff2') format('woff2'),
+         url('../fonts/ubuntu-r-webfont.woff') format('woff'),
+         url('../fonts/ubuntu-r-webfont.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
 
+@font-face {
+    font-family: 'ubuntu_condensed';
+    src: url('../fonts/ubuntu-c-webfont.eot');
+    src: url('../fonts/ubuntu-c-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/ubuntu-c-webfont.woff2') format('woff2'),
+         url('../fonts/ubuntu-c-webfont.woff') format('woff'),
+         url('../fonts/ubuntu-c-webfont.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'ubuntu_light';
+    src: url('../fonts/ubuntu-l-webfont.eot');
+    src: url('../fonts/ubuntu-l-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/ubuntu-l-webfont.woff2') format('woff2'),
+         url('../fonts/ubuntu-l-webfont.woff') format('woff'),
+         url('../fonts/ubuntu-l-webfont.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'ubuntu_medium';
+    src: url('../fonts/ubuntu-m-webfont.eot');
+    src: url('../fonts/ubuntu-m-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/ubuntu-m-webfont.woff2') format('woff2'),
+         url('../fonts/ubuntu-m-webfont.woff') format('woff'),
+         url('../fonts/ubuntu-m-webfont.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+$arial: Arial, "Helvetica Neue", Helvetica, sans-serif;
+$ubuntu-r: 'ubuntu', sans-serif;
+$ubuntu-c: 'ubuntu_condensed', sans-serif;
+$ubuntu-l: 'ubuntu_light', sans-serif;
+$ubuntu-m: 'ubuntu_medium', sans-serif;
 
 //mixins
 
