--- a/GoIT/markup/js_19-20/client_src/scss/partials/_content.scss
+++ b/GoIT/markup/js_19-20/client_src/scss/partials/_content.scss
@@ -1,7 +1,5 @@
 // slider
 
-
-
 // intro block
 
 .intro {
@@ -18,25 +16,44 @@
   }
 }
 
-.intro-article__title {
+@for $i from 1 to 4 {
+  .intro-article__title--#{$i} {
+    background: url(../img/intro-#{$i}.png) 120px 13px no-repeat;
+  }
 }
 
 .intro-article__number {
+  display: inline-block;
+  width: 120px;
   color: $darkest-gray;
+  opacity: 0.1;
+  font-family: $ubuntu-m;
   font-size: 90px;
 }
 
 .intro-article__header {
+  display: inline;
+  width: 240px;
   color: $darkest-gray;
+  font-family: $ubuntu-m;
+  font-size: 20px;
 }
 
 .intro-article__text {
-  margin: 26px 0 26px 0;
+  overflow: hidden;
+  margin: 10px 0 20px 120px;
+  height: 58px;
+  line-height: 20px;
   color: $light-gray;
+  font-family: $arial;
+  font-size: 13px;
 }
 
 .intro-article__more {
+  margin-left: 120px;
   color: $darkest-gray;
+  font-family: $ubuntu-m;
+  font-size: 13px;
 
   &::after {
     @include fa;
@@ -64,6 +81,8 @@
 .services__header {
   padding: 50px 0 54px 0;
   color: $white;
+  font-family: $ubuntu-m;
+  font-size: 24px;
 }
 
 .services__articles {
@@ -72,13 +91,21 @@
 
 .services-article {
   display: inline-block;
+  padding-right: 36px;
+
+  &:last-child {
+    padding-right: 0;
+  }
 }
 
 .services-article__anchor:hover {
-  
+
   & .services-article__outer-image {
-    background: $blue;
-    opacity: 0.9;
+    background: $blue url(../img/services-cross.png) center no-repeat;
+  }
+
+  & .services-article__inner-image {
+    opacity: 0.2;
   }
 
   & .services-article__title {
@@ -87,13 +114,22 @@
 }
 
 .services-article__title {
+  padding-top: 30px;
   text-align: center;
   color: $white;
+  font-family: $ubuntu-m;
+  font-size: 16px;
 }
 
 .services-article__outer-image {
-  width: 260px;
-  height: 260px;
+  @include square(260px);
+}
+
+@for $i from 1 to 5 {
+  .services-article__inner-image--#{$i} {
+    @include square;
+    background: url(../img/services-#{$i}.png) top right no-repeat;
+  }
 }
 
 // latest-news block
@@ -116,6 +152,8 @@
 .news__header {
   margin-bottom: 48px;
   color: $dark-gray;
+  font-family: $ubuntu-m;
+  font-size: 24px;
 }
 
 .news__article {
@@ -152,6 +190,8 @@
   line-height: 40px;
   color: $white;
   background-color: $blue;
+  font-family: $ubuntu-m;
+  font-size: 15px;
 }
 
 .news__date {
@@ -160,21 +200,34 @@
   line-height: 40px;
   color: $dark-gray;
   background-color: $yellow;
+  font-family: $ubuntu-m;
+  font-size: 18px;
 }
 
 .news__title {
   display: block;
   padding-bottom: 10px;
   color: $dark-gray;
+  font-family: $ubuntu-m;
+  font-size: 16px;
 
   &:hover {
     color: $blue;
   }
 }
 
+.news__text {
+  line-height: 20px;
+  color: $light-gray;
+  font-family: $arial;
+  font-size: 13px;
+}
+
 .news__description {
   padding-bottom: 30px;
   color: $news-description-color;
+  font-family: $arial;
+  font-size: 13px;
 }
 
 .news__author, .news__comments {
@@ -191,6 +244,8 @@
 .banners__header {
   margin-bottom: 48px;
   color: $dark-gray;
+  font-family: $ubuntu-m;
+  font-size: 24px;
 }
 
 .banners__panel {
@@ -216,11 +271,18 @@
 
 .banners__title {
   line-height: 39px;
+  font-family: $ubuntu-m;
+  font-size: 13px;
+  text-transform: uppercase;
 }
 
 .banners__text {
   display: none;
   padding: 23px 0 43px 39px;
+  line-height: 20px;
+  color: $light-gray;
+  font-family: $arial;
+  font-size: 13px;
 
   &--active {
     display: block;
