--- a/GoIT/markup/js_19-20/client_src/scss/partials/_header.scss
+++ b/GoIT/markup/js_19-20/client_src/scss/partials/_header.scss
@@ -1,3 +1,5 @@
+// header block
+
 .header-upper {
   line-height: 37px;
   padding: 37px 0;
@@ -8,15 +10,24 @@
   background:transparent url('../img/logo.png') left top no-repeat;
   float: left;
   padding-left: 52px;
-  line-height: 100%;
 }
 
 .logo__header {
   color: $logo-header-color;
+  font-family: $ubuntu-m;
+  font-size: 30px;
+  line-height: 24px;
 }
 
 .logo__text {
+  padding-left: 2px;
   color: $logo-paragraph-color;
+  font-family: $ubuntu-l;
+  opacity: 0.65;
+  font-size: 12px;
+  text-transform: uppercase;
+  vertical-align:bottom;
+  line-height: 18px;
 }
 
 .menu-socials {
@@ -59,6 +70,11 @@
   @include fa(skype);
 }
 
+.menu-main {
+  margin-bottom: 40px;
+  background-color: $dark-gray;
+}
+
 .menu-main__item {
   display: inline-block;
   border-right: 1px solid $almost-black;
@@ -72,17 +88,20 @@
   &--active {
     background-color: $blue;
     border: 0;
-  }
-}
 
-.menu-main {
-  background-color: $dark-gray;
+    &:hover .menu-main__link {
+      color: $white;
+    }
+  }
 }
 
 .menu-main__link {
   display: block;
   padding: 0 40px;
   line-height: 56px;
+  font-family: $ubuntu-c;
+  font-size: 14px;
+  text-transform: uppercase;
   color: $white;
 
   &:visited {
@@ -106,12 +125,16 @@
     @include fa;
     @include fa(search);
     @include fa(left);
+    opacity: 0.15;
   }
 
   & input {
     border: 0;
     background-color: $gray;
     color: $white;
+    font-family: $arial;
+    font-size: 12px;
+    opacity: 0.15;
   
     &:focus {
       outline: none;
