--- a/GoIT/markup/js_19-20/client_src/scss/partials/_footer.scss
+++ b/GoIT/markup/js_19-20/client_src/scss/partials/_footer.scss
@@ -25,6 +25,7 @@
 }
 
 .footer-contacts {
+  line-height: 60px;
   background-color: $gray;
 }
 
@@ -49,11 +50,8 @@
 
   &:hover {
     color: $blue;
+    opacity: 1;
   }
-}
-
-.footer-contacts {
-  line-height: 60px;
 }
 
 .footer-contacts__item {
@@ -66,7 +64,7 @@
     @include fa;
     @include fa-right(20px);
     @include fa-align(baseline);
-  } 
+  }
 }
 
 .footer-contacts__item--address::before {
