--- a/GoIT/markup/js_19-20/client_src/scss/main.scss
+++ b/GoIT/markup/js_19-20/client_src/scss/main.scss
@@ -10,7 +10,7 @@
  * Custom
  */
 
-@import "variables";
-@import "partials/header";
-@import "partials/content";
-@import "partials/footer";
+@import "_variables";
+@import "partials/_header";
+@import "partials/_content";
+@import "partials/_footer";
