--- a/GoIT/markup/js_19-20/client_src/scss/partials/_content.scss
+++ b/GoIT/markup/js_19-20/client_src/scss/partials/_content.scss
@@ -1,5 +1,27 @@
 // slider
 
+.flexslider {
+  box-shadow: none;
+}
+
+.flex-control-nav {
+  bottom: 15px;
+}
+
+.flex-control-paging li {
+  vertical-align: middle;
+
+  a {
+    @include square(15px);
+    border-radius: 0;
+    background-color: white;
+
+    &.flex-active {
+      border: 3px solid white;
+    }
+  }
+}
+
 // intro block
 
 .intro {
