--- a/GoIT/markup/js_exam/client_src/template/content.html
+++ b/GoIT/markup/js_exam/client_src/template/content.html
@@ -1,163 +1,83 @@
-<section>
+<section class="how-it-works">
     <div class="wrapper">
-
-        <div class="slider">
-            <div class="flexslider">
-                <ul class="slides">
-                    <li>
-                        <img src="img/slide-1.png" />
-                    </li>
-                    <li>
-                        <img src="img/slide-2.jpg" />
-                    </li>
-                    <li>
-                        <img src="img/slide-3.jpg" />
-                    </li>
-                </ul>
-            </div>
+        <h3>How Urlaubsglück works?</h3>
+        <div class="tile tile--how">
+            <a href="#" class="tile__left-arrow"></a>
+            <a href="#" class="tile__right-arrow"></a>
+            <p class="tile__step">Step 1</p>
+            <p class="tile__heading tile__heading--how">Sed leo enim, condimentum</p>
+            <p class="tile__text">Quisque libero libero, dictum non turpis in, luctus semper lorem. Donec rhoncus a leo sit amet facilisis.</p>
         </div>
-
-        <section class="intro">
-            <div class="intro-article">
-                <div class="intro-article__title intro-article__title--1">
-                    <span class="intro-article__number">01</span>
-                    <h3 class="intro-article__header">Power Inside</h3>
-                </div>
-                <p class="intro-article__text">Cum sociis natoque penatibus et magnis dis parturient montesmus. Pro vel nibh et elit mollis commodo et nec augueique Nemo enim ipsam voluptatem quia 
-ptas sit aspernatur samomo enim ipsam voluptatem.</p>
-                <a href="#" class="intro-article__more">Read More</a>
-            </div>
-            <div class="intro-article">
-                <div class="intro-article__title intro-article__title--2">
-                    <span class="intro-article__number">02</span>
-                    <h3 class="intro-article__header">New Technologies</h3>
-                </div>
-                <p class="intro-article__text">Cum sociis natoque penatibus et magnis dis parturient montesmus. Pro vel nibh et elit mollis commodo et nec augueique Nemo enim ipsam voluptatem quia 
-ptas sit aspernatur samomo enim ipsam voluptatem.</p>
-                <a href="#" class="intro-article__more">Read More</a>
-            </div>
-            <div class="intro-article">
-                <div class="intro-article__title intro-article__title--3">
-                    <span class="intro-article__number">03</span>
-                    <h3 class="intro-article__header">Fast Support</h3>
-                </div>
-                <p class="intro-article__text">Cum sociis natoque penatibus et magnis dis parturient montesmus. Pro vel nibh et elit mollis commodo et nec augueique Nemo enim ipsam voluptatem quia 
-ptas sit aspernatur samomo enim ipsam voluptatem.</p>
-                <a href="#" class="intro-article__more">Read More</a>
-            </div>
-        </section>
-
-    </div>
-</section>
-
-<section class="services">
-    <div class="wrapper">
-        <h2 class="services__header">Our Services</h2>
-        <ul class="services__articles">
-            <li class="services-article">
-                <a href="#" class="services-article__anchor">
-                    <div class="services-article__outer-image">
-                        <div class="services-article__inner-image services-article__inner-image--1"></div>
-                    </div>
-                    <p class="services-article__title">Schedule Services</p>
-                </a>
-            </li>
-            <li class="services-article">
-                <a href="#" class="services-article__anchor">
-                    <div class="services-article__outer-image">
-                        <div class="services-article__inner-image services-article__inner-image--2"></div>
-                    </div>
-                    <p class="services-article__title">Preventive Maintence</p>
-                </a>
-            </li>
-            <li class="services-article">
-                <a href="#" class="services-article__anchor">
-                    <div class="services-article__outer-image">
-                        <div class="services-article__inner-image services-article__inner-image--3"></div>
-                    </div>
-                    <p class="services-article__title">Tire &amp; Wheel Services</p>
-                </a>
-            </li>
-            <li class="services-article">
-                <a href="#" class="services-article__anchor">
-                    <div class="services-article__outer-image">
-                        <div class="services-article__inner-image services-article__inner-image--4"></div>
-                    </div>
-                    <p class="services-article__title">Repair Services</p>
-                </a>
-            </li>
-        </ul>
-    </div>
-</section>
-
-<section class="latest-news">
-    <div class="wrapper">
-        <div class="news">
-            <h2 class="news__header">Latest News</h2>
-
-            <div class="news__article">
-                <img src="img/latest-news-1.png" class="news__image">
-                <div class="news__dates">
-                    <p class="news__month">Jan</p>
-                    <p class="news__date">23</p>
-                </div>
-                <div class="news__preview">
-                    <h3><a href="#"  class="news__title">Advanced Machinery Helps Improve Quality</a></h3>
-                    <p class="news__description">
-                        <span>by</span>
-                        <a href="#" class="news__author">cmsmasters</a>
-                        <span>Comments (</span>
-                        <a href="#" class="news__comments">6</a>
-                        <span>)</span>
-                    </p>
-                    <p class="news__text">Cum sociis natoque penatibus et magnis dis parturient ontesmus. Pro vel nibh et elit mollis commodo et nec augueique Nemo enim ipsam voluptatem quia ptas sit aspernatur samomo enim ipsam voluptatem.</p>
-                </div>
-            </div>
-
-            <div class="news__article">
-                <img src="img/latest-news-2.png" class="news__image">
-                <div class="news__dates">
-                    <p class="news__month">Jan</p>
-                    <p class="news__date">21</p>
-                </div>
-                <div class="news__preview">
-                    <h3><a href="#"  class="news__title">Powerful Techniques for Advanced Service</a></h3>
-                    <p class="news__description">
-                        <span>by</span>
-                        <a href="#" class="news__author">cmsmasters</a>
-                        <span>Comments (</span>
-                        <a href="#" class="news__comments">3</a>
-                        <span>)</span>
-                    </p>
-                    <p class="news__text">Cum sociis natoque penatibus et magnis dis parturient ontesmus. Pro vel nibh et elit mollis commodo et nec augueique Nemo enim ipsam voluptatem quia ptas sit aspernatur samomo enim ipsam voluptatem.</p>
-                </div>
-            </div>
-
+        <div class="tile tile--how">
+            <a href="#" class="tile__left-arrow"></a>
+            <a href="#" class="tile__right-arrow"></a>
+            <p class="tile__step">Step 2</p>
+            <p class="tile__heading tile__heading--how">Morbi velit risus</p>
+            <p class="tile__text">Nulla venenatis tempor dui in molestie. Nulla quis dictum purus, sit amet porttitor est.</p>
         </div>
-
-        <div class="banners">
-            <h2 class="banners__header">Banners Place</h2>
-            <div class="banners__panel banners__panel--active"><span class="banners__title">Accordion Panel 1</span></div>
-            <p class="banners__text banners__text--active">Cum sociis natoque penatibus et magnis dis parturient mus. Pro vel nibh et elit mollis commodo et nec augueique Nemo enim ipsam voluptatem quia ptas sit aspernatur momo. Cum sociis natoque penatibus et magnis dis parturient ontesmus. Nemo enim ipsam voluptatem quia ptas sit aspernatur samomoPro vel nibh et elit mollis commodo et nec augueique Nemo enim ipsam voluptatem quia ptas sit aspernatur </p>
-            <div class="banners__panel"><span class="banners__title">Accordion Panel 2</span></div>
-            <p class="banners__text">Cum sociis natoque penatibus et magnis dis parturient mus. Pro vel nibh et elit mollis commodo et nec augueique Nemo enim ipsam voluptatem quia ptas sit aspernatur momo. Cum sociis natoque penatibus et magnis dis parturient ontesmus. Nemo enim ipsam voluptatem quia ptas sit aspernatur samomoPro vel nibh et elit mollis commodo et nec augueique Nemo enim ipsam voluptatem quia ptas sit aspernatur </p>
-            <div class="banners__panel"><span class="banners__title">Accordion Panel 3</span></div>
-            <p class="banners__text">Cum sociis natoque penatibus et magnis dis parturient mus. Pro vel nibh et elit mollis commodo et nec augueique Nemo enim ipsam voluptatem quia ptas sit aspernatur momo. Cum sociis natoque penatibus et magnis dis parturient ontesmus. Nemo enim ipsam voluptatem quia ptas sit aspernatur samomoPro vel nibh et elit mollis commodo et nec augueique Nemo enim ipsam voluptatem quia ptas sit aspernatur </p>
-            <div class="banners__panel"><span class="banners__title">Accordion Panel 4</span></div>
-            <p class="banners__text">Cum sociis natoque penatibus et magnis dis parturient mus. Pro vel nibh et elit mollis commodo et nec augueique Nemo enim ipsam voluptatem quia ptas sit aspernatur momo. Cum sociis natoque penatibus et magnis dis parturient ontesmus. Nemo enim ipsam voluptatem quia ptas sit aspernatur samomoPro vel nibh et elit mollis commodo et nec augueique Nemo enim ipsam voluptatem quia ptas sit aspernatur </p>
+        <div class="tile tile--how">
+            <a href="#" class="tile__left-arrow"></a>
+            <a href="#" class="tile__right-arrow"></a>
+            <p class="tile__step">Step 3</p>
+            <p class="tile__heading tile__heading--how">Sed leo enim, condimentum</p>
+            <p class="tile__text">Quisque libero libero, dictum non turpis in, luctus semper lorem. Donec rhoncus a leo sit amet facilisis.</p>
         </div>
     </div>
 </section>
 
-<section class="anchors">
+<section class="meet-a-partner">
     <div class="wrapper">
-        <ul class="menu-anchors">
-            <li class="menu-anchors__item"><a href="#" class="menu-anchors__link"></a></li>
-            <li class="menu-anchors__item"><a href="#" class="menu-anchors__link"></a></li>
-            <li class="menu-anchors__item"><a href="#" class="menu-anchors__link"></a></li>
-            <li class="menu-anchors__item"><a href="#" class="menu-anchors__link"></a></li>
-            <li class="menu-anchors__item"><a href="#" class="menu-anchors__link"></a></li>
-            <li class="menu-anchors__item"><a href="#" class="menu-anchors__link"></a></li>
-        </ul>
+        <h3>Meet a partner for your best holiday</h3>
+        <div class="partner">
+            <div class="partner__image">
+                <div class="partner__icon"></div>
+            </div>
+            <p class="partner__name">Bradley Hunter</p>
+            <p class="partner__desc">Based in Chicago. I love playing tennis and loud music.</p>
+        </div>
+        <div class="partner">
+            <div class="partner__image">
+                <div class="partner__icon"></div>
+            </div>
+            <p class="partner__name">Heather Walker</p>
+            <p class="partner__desc">I'm a happy person that loves cats and climbing on mountains.</p>
+        </div>
+        <div class="partner">
+            <div class="partner__image">
+                <div class="partner__icon"></div>
+            </div>
+            <p class="partner__name">Lucas Marsha</p>
+            <p class="partner__desc">I get my inspiration from nature and objects around me. I have a passion to colours, typography and skateboards.</p>
+        </div>
+        <div class="partner">
+            <div class="partner__image">
+                <div class="partner__icon"></div>
+            </div>
+            <p class="partner__name">Bradley Hunter</p>
+            <p class="partner__desc">Based in Chicago. I love playing tennis and loud music.</p>
+        </div>
+        <a href="#">See other partners</a>
+    </div>
+</section>
+
+<section class="discover-ideas">
+    <div class="wrapper">
+        <h3>Discover holiday activity ideas</h3>
+        <div class="tile tile--ideas"><h3 class="tile__heading tile__heading--ideas">Sport and Activity</h3></div>
+        <div class="tile tile--ideas"><h3 class="tile__heading tile__heading--ideas">Wellnes and Health</h3></div>
+        <div class="tile tile--ideas"><h3 class="tile__heading tile__heading--ideas">Extreme Sports and Expeditions</h3></div>
+        <div class="tile tile--ideas"><h3 class="tile__heading tile__heading--ideas">Games</h3></div>
+        <div class="tile tile--ideas"><h3 class="tile__heading tile__heading--ideas">Culture and Education</h3></div>
+        <div class="tile tile--ideas"><h3 class="tile__heading tile__heading--ideas">Relaxation</h3></div>
+        <div class="tile tile--ideas"><h3 class="tile__heading tile__heading--ideas">Travelling</h3></div>
+    </div>
+</section>
+
+<section class="searcher">
+    <div class="wrapper">
+        <h3>Discover holiday activity ideas</h3>
+        <p class="searcher__desc">Hi! What are your holiday interests?</p>
+        <input type="text" name="" id="" placeholder="Enter your interests">
+        <a href="#">Search partners</a>
     </div>
 </section>
