--- a/GoIT/markup/js_exam/client_src/template/footer.html
+++ b/GoIT/markup/js_exam/client_src/template/footer.html
@@ -1,54 +1,24 @@
 <footer class="footer">
-
-    <nav class="menu-footer">
-        <div class="wrapper">
-            <div class="menu-bottom-wrapper">
-                <h3 class="menu-bottom-header">Socials</h3>
-                <ul class="menu-bottom">
-                    <li class="menu-bottom__item"><a href="#" class="menu-bottom__link">Facebook</a></li>
-                    <li class="menu-bottom__item"><a href="#" class="menu-bottom__link">Flickr</a></li>
-                    <li class="menu-bottom__item"><a href="#" class="menu-bottom__link">Twitter</a></li>
-                    <li class="menu-bottom__item"><a href="#" class="menu-bottom__link">Vimeo</a></li>
-                </ul>
-            </div>
-            <div class="menu-bottom-wrapper">
-                <h3 class="menu-bottom-header">Links</h3>
-                <ul class="menu-bottom">
-                    <li class="menu-bottom__item"><a href="#" class="menu-bottom__link">How to Write a Blog</a></li>
-                    <li class="menu-bottom__item"><a href="#" class="menu-bottom__link">Create a Blog in 4 Steps</a></li>
-                    <li class="menu-bottom__item"><a href="#" class="menu-bottom__link">15 Tips to Increase Traffic</a></li>
-                    <li class="menu-bottom__item"><a href="#" class="menu-bottom__link">20 Blog Post Ideas</a></li>
-                </ul>
-            </div>
-            <div class="menu-bottom-wrapper">
-                <h3 class="menu-bottom-header">Blogroll</h3>
-                <ul class="menu-bottom">
-                    <li class="menu-bottom__item"><a href="#" class="menu-bottom__link">Blogs Blog</a></li>
-                    <li class="menu-bottom__item"><a href="#" class="menu-bottom__link">Roll Up Roll Up</a></li>
-                    <li class="menu-bottom__item"><a href="#" class="menu-bottom__link">Blog Free</a></li>
-                    <li class="menu-bottom__item"><a href="#" class="menu-bottom__link">Wordpress Blog</a></li>
-                </ul>
-            </div>
-            <div class="menu-bottom-wrapper">
-                <h3 class="menu-bottom-header">About Us</h3>
-                <ul class="menu-bottom">
-                    <li class="menu-bottom__item"><a href="#" class="menu-bottom__link">Agriculture</a></li>
-                    <li class="menu-bottom__item"><a href="#" class="menu-bottom__link">Harvest</a></li>
-                    <li class="menu-bottom__item"><a href="#" class="menu-bottom__link">Company news</a></li>
-                    <li class="menu-bottom__item"><a href="#" class="menu-bottom__link">Investor relations</a></li>
-                </ul>
-            </div>
+    <div class="wrapper">
+        <h2 class="footer__title">Urlaubsglück</h2>
+        <div class="company-wrapper">
+            <ul class="footer-menu">
+                <li class="footer-menu__title">Company</li>
+                <li class="footer-menu__item">About</li>
+                <li class="footer-menu__item">Contacts</li>
+                <li class="footer-menu__item">Press</li>
+                <li class="footer-menu__item">Blog</li>
+            </ul>
         </div>
-    </nav>
-
-    <section class="footer-contacts">
-        <div class="wrapper">
-            <span class="footer-contacts__item footer-contacts__item--address">BuildHomeLtd.  Street Name 123   23 45 Cityname</span>
-            <span class="footer-contacts__item footer-contacts__item--phone">+123 900 123 456</span>
-            <span class="footer-contacts__item footer-contacts__item--email">info@buildhome.web</span>
-            <span class="footer-contacts__item footer-contacts__item--title">&copy; 2014 Build Home</span>
+        <div class="partners-wrapper">
+            <ul class="footer-menu">
+                <li class="footer-menu__title">Partners</li>
+            </ul>
         </div>
-    </section>
-
+        <div class="designed-by">
+            <p class="designed-by__text">Designed by</p>
+            <p class="designed-by__logo"></p>
+        </div>
+    </div>
 </footer>
 
