--- a/GoIT/markup/js_exam/client_src/template/header.html
+++ b/GoIT/markup/js_exam/client_src/template/header.html
@@ -1,34 +1,10 @@
 <header class="header">
-
-    <div class="wrapper">
-        <div class="header-upper">
-            <a href="#" class="logo">
-                <h1 class="logo__header">Build Home</h1>
-                <p class="logo__text">Industrial Theme</p>
-            </a>
-            <ul class="menu-socials">
-                <li class="menu-socials__item facebook"></li>
-                <li class="menu-socials__item twitter"></li>
-                <li class="menu-socials__item rss"></li>
-                <li class="menu-socials__item linkedin"></li>
-                <li class="menu-socials__item skype"></li>
-            </ul>
-        </div>
-
-        <nav>
-            <ul class="menu-main">
-                <li class="menu-main__item menu-main__item--active"><a href="#" class="menu-main__link">Home</a></li>
-                <li class="menu-main__item"><a href="#" class="menu-main__link">Features</a></li>
-                <li class="menu-main__item"><a href="#" class="menu-main__link">Services</a></li>
-                <li class="menu-main__item"><a href="#" class="menu-main__link">News</a></li>
-                <li class="menu-main__item"><a href="#" class="menu-main__link">Shop</a></li>
-                <li class="menu-main__item">
-                    <div class="menu-main__search">
-                        <input type="text" name="" id="" placeholder="Search">
-                    </div>
-                </li>
-            </ul>
-        </nav>
+    <div class="header__login">
+        <a href="#">Log in</a>
+        <a href="#">Sign up</a>
     </div>
-    
+    <h1>URLAUBSGLÜCK</h1>
+    <h2>Share your holiday dreams</h2>
+    <p>And find the perfect partner to fullfill it</p>
+    <a href="#">Find your holiday partner</a>
 </header>
