--- a/GoIT/markup/js_exam/client_src/template/content.html
+++ b/GoIT/markup/js_exam/client_src/template/content.html
@@ -1,6 +1,6 @@
 <section class="how-it-works">
     <div class="wrapper">
-        <h3>How Urlaubsglück works?</h3>
+        <h3 class="section-heading">How Urlaubsglück works?</h3>
         <div class="tile tile--how">
             <a href="#" class="tile__left-arrow"></a>
             <a href="#" class="tile__right-arrow"></a>
@@ -27,7 +27,7 @@
 
 <section class="meet-a-partner">
     <div class="wrapper">
-        <h3>Meet a partner for your best holiday</h3>
+        <h3 class="section-heading">Meet a partner for your best holiday</h3>
         <div class="partner">
             <div class="partner__image">
                 <div class="partner__icon"></div>
@@ -56,13 +56,13 @@
             <p class="partner__name">Bradley Hunter</p>
             <p class="partner__desc">Based in Chicago. I love playing tennis and loud music.</p>
         </div>
-        <a href="#">See other partners</a>
+        <a href="#" class="button button--partners">See other partners</a>
     </div>
 </section>
 
 <section class="discover-ideas">
     <div class="wrapper">
-        <h3>Discover holiday activity ideas</h3>
+        <h3 class="section-heading">Discover holiday activity ideas</h3>
         <div class="tile tile--ideas"><h3 class="tile__heading tile__heading--ideas">Sport and Activity</h3></div>
         <div class="tile tile--ideas"><h3 class="tile__heading tile__heading--ideas">Wellnes and Health</h3></div>
         <div class="tile tile--ideas"><h3 class="tile__heading tile__heading--ideas">Extreme Sports and Expeditions</h3></div>
@@ -75,9 +75,9 @@
 
 <section class="searcher">
     <div class="wrapper">
-        <h3>Discover holiday activity ideas</h3>
+        <h3 class="section-heading">Discover holiday activity ideas</h3>
         <p class="searcher__desc">Hi! What are your holiday interests?</p>
         <input type="text" name="" id="" placeholder="Enter your interests">
-        <a href="#">Search partners</a>
+        <a href="#" class="button button--searcher">Search partners</a>
     </div>
 </section>
