--- a/GoIT/markup/js_exam/client_src/template/footer.html
+++ b/GoIT/markup/js_exam/client_src/template/footer.html
@@ -3,11 +3,11 @@
         <h2 class="footer__title">Urlaubsglück</h2>
         <div class="company-wrapper">
             <ul class="footer-menu">
-                <li class="footer-menu__title">Company</li>
-                <li class="footer-menu__item">About</li>
-                <li class="footer-menu__item">Contacts</li>
-                <li class="footer-menu__item">Press</li>
-                <li class="footer-menu__item">Blog</li>
+                <li class="footer-menu__title"><a href="#" class="">Company</a></li>
+                <li class="footer-menu__item"><a href="#" class="">About</a></li>
+                <li class="footer-menu__item"><a href="#" class="">Contacts</a></li>
+                <li class="footer-menu__item"><a href="#" class="">Press</a></li>
+                <li class="footer-menu__item"><a href="#" class="">Blog</a></li>
             </ul>
         </div>
         <div class="partners-wrapper">
