--- a/GoIT/markup/js_exam/client_src/template/header.html
+++ b/GoIT/markup/js_exam/client_src/template/header.html
@@ -1,10 +1,12 @@
 <header class="header">
-    <div class="header__login">
-        <a href="#">Log in</a>
-        <a href="#">Sign up</a>
+    <div class="wrapper">
+        <div class="login">
+            <a href="#" class="login__button">Log in</a>
+            <a href="#" class="login__button login__button--bordered">Sign up</a>
+        </div>
+        <h1 class="header__title">URLAUBSGLÜCK</h1>
+        <h2 class="header__slogan">Share your holiday dreams</h2>
+        <p class="header__slogan--add">And find the perfect partner to fullfill it</p>
+        <a href="#" class="button button--header-main">Find your holiday partner</a>
     </div>
-    <h1>URLAUBSGLÜCK</h1>
-    <h2>Share your holiday dreams</h2>
-    <p>And find the perfect partner to fullfill it</p>
-    <a href="#">Find your holiday partner</a>
 </header>
