--- a/GoIT/markup/js_exam/client_src/scss/_variables.scss
+++ b/GoIT/markup/js_exam/client_src/scss/_variables.scss
@@ -1,85 +1,202 @@
 // main
 
-// * {
-//   box-sizing: border-box;
-// }
-
-.wrapper {
-  margin: 0 auto;
-  width: 1160px;
+* {
+  box-sizing: border-box;
 }
 
-a {
-  text-decoration: none;
+.wrapper {
+  margin: 0 10px;
+  // width: 1160px;
+  min-width: 300px;
+
 }
 
 // colors
 
-$logo-header-color: #434343;
-$logo-paragraph-color: #333333;
-$white: #ffffff;
-$almost-white: #e8e8e8;
-$very-light-gray: #cccccc;
-$light-gray: #8a8a8a;
-$gray: #35383c;
-$dark-gray: #2a2d32;
-$darkest-gray: #2a2b2e;
-$almost-black: #181a1d;
-$yellow: #f4b60d;
-$blue: #248cec;
-$news-description-color: #9d9d9d;
+$main-text-color: #ffffff;
+$additional-text-color: #333333;
+$auxiliary-color: #ff4e50;
+
+a {
+    display: inline-block;
+    text-decoration: none;
+    color: $main-text-color;
+
+    &:hover {
+        color: $main-text-color;
+    }
+}
 
 // fonts
 
 @font-face {
-    font-family: 'ubuntu';
-    src: url('../fonts/ubuntu-r-webfont.eot');
-    src: url('../fonts/ubuntu-r-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/ubuntu-r-webfont.woff2') format('woff2'),
-         url('../fonts/ubuntu-r-webfont.woff') format('woff'),
-         url('../fonts/ubuntu-r-webfont.ttf') format('truetype');
+    font-family: 'montserratbold';
+    src: url('../fonts/montserrat-bold-webfont.eot');
+    src: url('../fonts/montserrat-bold-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/montserrat-bold-webfont.woff2') format('woff2'),
+         url('../fonts/montserrat-bold-webfont.woff') format('woff'),
+         url('../fonts/montserrat-bold-webfont.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
-    font-family: 'ubuntu_condensed';
-    src: url('../fonts/ubuntu-c-webfont.eot');
-    src: url('../fonts/ubuntu-c-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/ubuntu-c-webfont.woff2') format('woff2'),
-         url('../fonts/ubuntu-c-webfont.woff') format('woff'),
-         url('../fonts/ubuntu-c-webfont.ttf') format('truetype');
+    font-family: 'montserratregular';
+    src: url('../fonts/montserrat-regular-webfont.eot');
+    src: url('../fonts/montserrat-regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/montserrat-regular-webfont.woff2') format('woff2'),
+         url('../fonts/montserrat-regular-webfont.woff') format('woff'),
+         url('../fonts/montserrat-regular-webfont.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
-    font-family: 'ubuntu_light';
-    src: url('../fonts/ubuntu-l-webfont.eot');
-    src: url('../fonts/ubuntu-l-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/ubuntu-l-webfont.woff2') format('woff2'),
-         url('../fonts/ubuntu-l-webfont.woff') format('woff'),
-         url('../fonts/ubuntu-l-webfont.ttf') format('truetype');
+    font-family: 'robotoblack';
+    src: url('../fonts/roboto-black-webfont.eot');
+    src: url('../fonts/roboto-black-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/roboto-black-webfont.woff2') format('woff2'),
+         url('../fonts/roboto-black-webfont.woff') format('woff'),
+         url('../fonts/roboto-black-webfont.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
-    font-family: 'ubuntu_medium';
-    src: url('../fonts/ubuntu-m-webfont.eot');
-    src: url('../fonts/ubuntu-m-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/ubuntu-m-webfont.woff2') format('woff2'),
-         url('../fonts/ubuntu-m-webfont.woff') format('woff'),
-         url('../fonts/ubuntu-m-webfont.ttf') format('truetype');
+    font-family: 'robotoblack_italic';
+    src: url('../fonts/roboto-blackitalic-webfont.eot');
+    src: url('../fonts/roboto-blackitalic-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/roboto-blackitalic-webfont.woff2') format('woff2'),
+         url('../fonts/roboto-blackitalic-webfont.woff') format('woff'),
+         url('../fonts/roboto-blackitalic-webfont.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
 
-$arial: Arial, "Helvetica Neue", Helvetica, sans-serif;
-$ubuntu-r: 'ubuntu', sans-serif;
-$ubuntu-c: 'ubuntu_condensed', sans-serif;
-$ubuntu-l: 'ubuntu_light', sans-serif;
-$ubuntu-m: 'ubuntu_medium', sans-serif;
+@font-face {
+    font-family: 'robotobold';
+    src: url('roboto-bold-webfont.eot');
+    src: url('roboto-bold-webfont.eot?#iefix') format('embedded-opentype'),
+         url('roboto-bold-webfont.woff2') format('woff2'),
+         url('roboto-bold-webfont.woff') format('woff'),
+         url('roboto-bold-webfont.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'robotobold_italic';
+    src: url('../fonts/roboto-bolditalic-webfont.eot');
+    src: url('../fonts/roboto-bolditalic-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/roboto-bolditalic-webfont.woff2') format('woff2'),
+         url('../fonts/roboto-bolditalic-webfont.woff') format('woff'),
+         url('../fonts/roboto-bolditalic-webfont.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'robotoitalic';
+    src: url('../fonts/roboto-italic-webfont.eot');
+    src: url('../fonts/roboto-italic-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/roboto-italic-webfont.woff2') format('woff2'),
+         url('../fonts/roboto-italic-webfont.woff') format('woff'),
+         url('../fonts/roboto-italic-webfont.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'robotolight';
+    src: url('../fonts/roboto-light-webfont.eot');
+    src: url('../fonts/roboto-light-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/roboto-light-webfont.woff2') format('woff2'),
+         url('../fonts/roboto-light-webfont.woff') format('woff'),
+         url('../fonts/roboto-light-webfont.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'robotolight_italic';
+    src: url('../fonts/roboto-lightitalic-webfont.eot');
+    src: url('../fonts/roboto-lightitalic-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/roboto-lightitalic-webfont.woff2') format('woff2'),
+         url('../fonts/roboto-lightitalic-webfont.woff') format('woff'),
+         url('../fonts/roboto-lightitalic-webfont.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'robotomedium';
+    src: url('../fonts/roboto-medium-webfont.eot');
+    src: url('../fonts/roboto-medium-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/roboto-medium-webfont.woff2') format('woff2'),
+         url('../fonts/roboto-medium-webfont.woff') format('woff'),
+         url('../fonts/roboto-medium-webfont.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'robotomedium_italic';
+    src: url('../fonts/roboto-mediumitalic-webfont.eot');
+    src: url('../fonts/roboto-mediumitalic-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/roboto-mediumitalic-webfont.woff2') format('woff2'),
+         url('../fonts/roboto-mediumitalic-webfont.woff') format('woff'),
+         url('../fonts/roboto-mediumitalic-webfont.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'robotoregular';
+    src: url('../fonts/roboto-regular-webfont.eot');
+    src: url('../fonts/roboto-regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/roboto-regular-webfont.woff2') format('woff2'),
+         url('../fonts/roboto-regular-webfont.woff') format('woff'),
+         url('../fonts/roboto-regular-webfont.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'robotothin';
+    src: url('../fonts/roboto-thin-webfont.eot');
+    src: url('../fonts/roboto-thin-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/roboto-thin-webfont.woff2') format('woff2'),
+         url('../fonts/roboto-thin-webfont.woff') format('woff'),
+         url('../fonts/roboto-thin-webfont.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'robotothin_italic';
+    src: url('../fonts/roboto-thinitalic-webfont.eot');
+    src: url('../fonts/roboto-thinitalic-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/roboto-thinitalic-webfont.woff2') format('woff2'),
+         url('../fonts/roboto-thinitalic-webfont.woff') format('woff'),
+         url('../fonts/roboto-thinitalic-webfont.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+$montserrat-b: 'montserratbold', sans-serif;
+$montserrat-r: 'montserratregular', sans-serif;
+$roboto-bl: 'robotoblack', sans-serif;
+$roboto-bl-i: 'robotoblack_italic', sans-serif;
+$roboto-b: 'robotobold', sans-serif;
+$roboto-b-i: 'robotobold_italic', sans-serif;
+$roboto-i: 'robotoitalic', sans-serif;
+$roboto-l: 'robotolight', sans-serif;
+$roboto-l-i: 'robotolight_italic', sans-serif;
+$roboto-m: 'robotomedium', sans-serif;
+$roboto-m-i: 'robotomedium_italic', sans-serif;
+$roboto-r: 'robotoregular', sans-serif;
+$roboto-t: 'robotothin', sans-serif;
+$roboto-t-i: 'robotothin_italic', sans-serif;
 
 //mixins
 
@@ -89,7 +206,11 @@ $ubuntu-m: 'ubuntu_medium', sans-serif;
     clear: both;
 }
 
-@mixin square($value: 100%) {
-    width: $value;
-    height: $value;
+@mixin button {
+    height: 40px;
+    line-height: 40px;
+    border: 2px solid transparent;
+    border-radius: 20px;
+    font-family: $montserrat-b;
+    font-size: 14px;
 }
