--- a/GoIT/markup/js_exam/client_src/scss/partials/_content.scss
+++ b/GoIT/markup/js_exam/client_src/scss/partials/_content.scss
@@ -1,33 +1,253 @@
 .how-it-works {
+    margin-top: 40px;
     color: $main-text-color;
 }
 
 .section-heading {
-    margin: 40px 0 20px 0;
+    margin-bottom:20px;
     color: $additional-text-color;
     text-align: center;
     font-family: $montserrat-b;
-    font-size: 14px;
+    font-size: 22px;
+}
+
+.jcarousel {
+    margin: 0 auto;
+    width: 300px;
+    height: 240px;
+    border-radius: 4px;
+    overflow: hidden;
+    position: relative;
+
+    &__list {
+        width: 20000em;
+        position: relative;
+        list-style: none;
+        margin: 0;
+        padding: 0;
+    }
+
+    &__tile {
+        float: left;
+
+        &--1 {
+            background: url(../img/step1.jpg) no-repeat;
+        }
+
+        &--2 {
+            background: url(../img/step2.jpg) no-repeat;
+        }
+
+        &--3 {
+            background: url(../img/step3.jpg) no-repeat;
+        }
+    }
+
+    &:nth-child(3) {
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+}
+
+.arrows__left {
+    position: absolute;
+    top: 153px;
+    width: 30px;
+    height: 55px;
+    display: block;
+    cursor: pointer;
+    // background: $url_10;
+    background-position: 0 68px;
+    left: 20px;
+    &:hover {
+        opacity: 0.8;
+    }
+    &:active {
+        opacity: 1;
+    }
+}
+.arrows__right {
+    position: absolute;
+    top: 153px;
+    width: 30px;
+    height: 55px;
+    display: block;
+    cursor: pointer;
+    // background: $url_10;
+    background-position: 31px 68px;
+    right: 20px;
+    &:hover {
+        opacity: 0.8;
+    }
+    &:active {
+        opacity: 1;
+    }
 }
 
 .tile {
     border-radius: 4px;
+    margin: 0 auto;
+    height: 240px;
 
-    &--how {
-        width: 300px;
-        height: 240px;
-        background: url(../img/how1.png) no-repeat, linear-gradient(to top, rgba(0, 0, 0, 0.6) 0%, transparent 100%);
+    // &--how {
+    //     position: relative;
+    //     overflow: hidden;
+    //     width: 300px;
+    //     height: 240px;
+
+    //     &:nth-child(2) {
+    //         background: url(../img/step1.jpg) no-repeat;
+    //     }
+
+    //     &:nth-child(3) {
+    //         margin: 10px auto;
+    //         background: url(../img/step2.jpg) no-repeat;
+    //     }
+
+    //     &:nth-child(4) {
+    //         background: url(../img/step3.jpg) no-repeat;
+    //     }
+    // }
+
+    &__article {
+        margin: 20px;
+        width: 260px;
+    }
+
+    &__step {
+        margin-top: 69px;
+        margin-bottom: 25px;
+        width: 70px;
+        height: 20px;
+        line-height: 20px;
+        border-radius: 10px;
+        background-color: $auxiliary-color;
+        text-transform: uppercase;
+        font-family: $montserrat-r;
+        font-size: 10px;
+        text-align: center;
+    }
+
+    &__heading {
+        font-family: $montserrat-b;
+        font-size: 24px;
+        margin-bottom: 24px;
+    }
+
+    &__text {
+        overflow: hidden;
+        height: 45px;
+        color: $tile-text-color;
+        font-family: $roboto-l;
+        font-size: 14px;
     }
 }
 
-
-
-@media screen and (max-width:480px) {
-    /* Селекторы */
+.meet-a-partner {
+    margin-top: 40px;
+    text-align: center;
 }
-@media screen and (min-width:480px) and (max-width:800px) {
-    /* Селекторы */
+
+.partner {
+    position: relative;
+    margin: 0 auto;
+    margin-bottom: 30px;
+    width: 220px;
+
+    &__image {
+        width: 120px;
+        height: 120px;
+        border-radius: 60px;
+        display: inline-block;
+    }
+
+    &__icon {
+        width: 40px;
+        height: 40px;
+        border-radius: 20px;
+        border: 4px solid #fff;
+        position: absolute;
+        top: 85px;
+        right: 46px;
+        padding: 7px 7px 7px 8px;
+
+        &--red {
+            background-color: #ff4e50;
+        }
+
+        &--green {
+            background-color: #1cd7ad;
+        }
+        &--yellow {
+            background-color: #ffa507;
+        }
+
+        &--blue {
+            background-color: #4e73db;
+        }
+    }
+
+    &__name {
+        margin: 14px 0 13px 0;
+        font-family: $montserrat-b;
+        font-size: 14px;
+        color: $additional-text-color;
+    }
+
+    &__desc {
+        font-family: $roboto-l;
+        font-size: 14px;
+        color: #666666;
+    }
 }
-@media screen and (min-width:800px) {
-    /* Селекторы */
+
+.button--partners {
+    @include button;
+    width: 280px;
+    color: $auxiliary-color;
+    border-color: $auxiliary-color;
+}
+
+.discover-ideas {
+    margin-top: 40px;
+}
+
+.tile__heading--ideas {
+    padding: 0 15px;
+    text-align: center;
+    line-height: 100%;
+    color: $main-text-color;
+}
+
+// isotope
+
+.searcher {
+    margin-top: 40px;
+    margin-bottom: 40px;
+    text-align: center;
+
+    &__desc {
+        color: $additional-text-color;
+        margin-bottom: 40px;
+        font-family: $roboto-l;
+        font-size: 18px;
+    }
+
+    &__input {
+        display: block;
+        margin: 0 auto 10px;
+        width: 280px;
+        height: 40px;
+        border-radius: 4px;
+        box-shadow: 0 1px #eee;
+        border: 1px solid #ccc;
+        padding: 0 15px
+    }
+}
+
+.button--searcher {
+    @include button;
+    width: 280px;
+    background-color: $auxiliary-color;
+    border-color: $auxiliary-color;
 }
