--- a/GoIT/markup/js_exam/client_src/scss/partials/_header.scss
+++ b/GoIT/markup/js_exam/client_src/scss/partials/_header.scss
@@ -1,5 +1,6 @@
 .header {
     background: url(../img/bg.jpg) center no-repeat;
+    background-size: cover;
     text-align: center;
     color: $main-text-color;
 
@@ -47,4 +48,3 @@
     background-color: $auxiliary-color;
     border-color: $auxiliary-color;
 }
-
