--- a/GoIT/markup/js_exam/client_src/template/content.html
+++ b/GoIT/markup/js_exam/client_src/template/content.html
@@ -1,26 +1,92 @@
 <section class="how-it-works">
     <div class="wrapper">
         <h3 class="section-heading">How Urlaubsglück works?</h3>
-        <div class="tile tile--how">
-            <a href="#" class="tile__left-arrow"></a>
-            <a href="#" class="tile__right-arrow"></a>
-            <p class="tile__step">Step 1</p>
-            <p class="tile__heading tile__heading--how">Sed leo enim, condimentum</p>
-            <p class="tile__text">Quisque libero libero, dictum non turpis in, luctus semper lorem. Donec rhoncus a leo sit amet facilisis.</p>
+        <div class="jcarousel">
+            <ul class="jcarousel__list">
+                <li class="tile jcarousel__tile jcarousel__tile--1">
+                    <article class="tile__article">
+                        <p class="tile__step">Step 1</p>
+                        <p class="tile__heading tile__heading--how">Sed leo enim, condimentum</p>
+                        <p class="tile__text">Quisque libero libero, dictum non turpis in, luctus semper lorem. Donec rhoncus a leo sit amet facilisis.</p>
+                    </article>
+                </li>
+                <li class="tile jcarousel__tile jcarousel__tile--2">
+                    <article class="tile__article">
+                        <p class="tile__step">Step 2</p>
+                        <p class="tile__heading tile__heading--how">Morbi velit risus</p>
+                        <p class="tile__text">Nulla venenatis tempor dui in molestie. Nulla quis dictum purus, sit amet porttitor est.</p>
+                    </article>
+                </li>
+                <li class="tile jcarousel__tile jcarousel__tile--3">
+                    <article class="tile__article">
+                        <p class="tile__step">Step 3</p>
+                        <p class="tile__heading tile__heading--how">Sed leo enim, condimentum</p>
+                        <p class="tile__text">Quisque libero libero, dictum non turpis in, luctus semper lorem. Donec rhoncus a leo sit amet facilisis.</p>
+                    </article>
+                </li>
+            </ul>
+            <div class="arrows flex-direction-nav">
+                <span class="arrows__left jcarousel-control-prev"></span>
+                <span class="arrows__right jcarousel-control-next"></span>
+            </div>
         </div>
-        <div class="tile tile--how">
-            <a href="#" class="tile__left-arrow"></a>
-            <a href="#" class="tile__right-arrow"></a>
-            <p class="tile__step">Step 2</p>
-            <p class="tile__heading tile__heading--how">Morbi velit risus</p>
-            <p class="tile__text">Nulla venenatis tempor dui in molestie. Nulla quis dictum purus, sit amet porttitor est.</p>
+        <div class="jcarousel">
+            <ul class="jcarousel__list">
+                <li class="tile jcarousel__tile jcarousel__tile--1">
+                    <article class="tile__article">
+                        <p class="tile__step">Step 1</p>
+                        <p class="tile__heading tile__heading--how">Sed leo enim, condimentum</p>
+                        <p class="tile__text">Quisque libero libero, dictum non turpis in, luctus semper lorem. Donec rhoncus a leo sit amet facilisis.</p>
+                    </article>
+                </li>
+                <li class="tile jcarousel__tile jcarousel__tile--2">
+                    <article class="tile__article">
+                        <p class="tile__step">Step 2</p>
+                        <p class="tile__heading tile__heading--how">Morbi velit risus</p>
+                        <p class="tile__text">Nulla venenatis tempor dui in molestie. Nulla quis dictum purus, sit amet porttitor est.</p>
+                    </article>
+                </li>
+                <li class="tile jcarousel__tile jcarousel__tile--3">
+                    <article class="tile__article">
+                        <p class="tile__step">Step 3</p>
+                        <p class="tile__heading tile__heading--how">Sed leo enim, condimentum</p>
+                        <p class="tile__text">Quisque libero libero, dictum non turpis in, luctus semper lorem. Donec rhoncus a leo sit amet facilisis.</p>
+                    </article>
+                </li>
+            </ul>
+            <div class="arrows flex-direction-nav">
+                <span class="arrows__left jcarousel-control-prev"></span>
+                <span class="arrows__right jcarousel-control-next"></span>
+            </div>
         </div>
-        <div class="tile tile--how">
-            <a href="#" class="tile__left-arrow"></a>
-            <a href="#" class="tile__right-arrow"></a>
-            <p class="tile__step">Step 3</p>
-            <p class="tile__heading tile__heading--how">Sed leo enim, condimentum</p>
-            <p class="tile__text">Quisque libero libero, dictum non turpis in, luctus semper lorem. Donec rhoncus a leo sit amet facilisis.</p>
+        <div class="jcarousel">
+            <ul class="jcarousel__list">
+                <li class="tile jcarousel__tile jcarousel__tile--1">
+                    <article class="tile__article">
+                        <p class="tile__step">Step 1</p>
+                        <p class="tile__heading tile__heading--how">Sed leo enim, condimentum</p>
+                        <p class="tile__text">Quisque libero libero, dictum non turpis in, luctus semper lorem. Donec rhoncus a leo sit amet facilisis.</p>
+                    </article>
+                </li>
+                <li class="tile jcarousel__tile jcarousel__tile--2">
+                    <article class="tile__article">
+                        <p class="tile__step">Step 2</p>
+                        <p class="tile__heading tile__heading--how">Morbi velit risus</p>
+                        <p class="tile__text">Nulla venenatis tempor dui in molestie. Nulla quis dictum purus, sit amet porttitor est.</p>
+                    </article>
+                </li>
+                <li class="tile jcarousel__tile jcarousel__tile--3">
+                    <article class="tile__article">
+                        <p class="tile__step">Step 3</p>
+                        <p class="tile__heading tile__heading--how">Sed leo enim, condimentum</p>
+                        <p class="tile__text">Quisque libero libero, dictum non turpis in, luctus semper lorem. Donec rhoncus a leo sit amet facilisis.</p>
+                    </article>
+                </li>
+            </ul>
+            <div class="arrows flex-direction-nav">
+                <span class="arrows__left jcarousel-control-prev"></span>
+                <span class="arrows__right jcarousel-control-next"></span>
+            </div>
         </div>
     </div>
 </section>
@@ -29,30 +95,26 @@
     <div class="wrapper">
         <h3 class="section-heading">Meet a partner for your best holiday</h3>
         <div class="partner">
-            <div class="partner__image">
-                <div class="partner__icon"></div>
-            </div>
+            <img src="img/partner1.png" class="partner__image">
+            <div class="partner__icon partner__icon--red"></div>
             <p class="partner__name">Bradley Hunter</p>
             <p class="partner__desc">Based in Chicago. I love playing tennis and loud music.</p>
         </div>
         <div class="partner">
-            <div class="partner__image">
-                <div class="partner__icon"></div>
-            </div>
-            <p class="partner__name">Heather Walker</p>
-            <p class="partner__desc">I'm a happy person that loves cats and climbing on mountains.</p>
-        </div>
-        <div class="partner">
-            <div class="partner__image">
-                <div class="partner__icon"></div>
-            </div>
+            <img src="img/partner2.png" class="partner__image">
+            <div class="partner__icon partner__icon--yellow"></div>
             <p class="partner__name">Lucas Marsha</p>
             <p class="partner__desc">I get my inspiration from nature and objects around me. I have a passion to colours, typography and skateboards.</p>
         </div>
         <div class="partner">
-            <div class="partner__image">
-                <div class="partner__icon"></div>
-            </div>
+            <img src="img/partner3.png" class="partner__image">
+            <div class="partner__icon partner__icon--green"></div>
+            <p class="partner__name">Heather Walker</p>
+            <p class="partner__desc">I'm a happy person that loves cats and climbing on mountains.</p>
+        </div>
+        <div class="partner">
+            <img src="img/partner4.png" class="partner__image">
+            <div class="partner__icon partner__icon--blue"></div>
             <p class="partner__name">Bradley Hunter</p>
             <p class="partner__desc">Based in Chicago. I love playing tennis and loud music.</p>
         </div>
@@ -63,21 +125,26 @@
 <section class="discover-ideas">
     <div class="wrapper">
         <h3 class="section-heading">Discover holiday activity ideas</h3>
-        <div class="tile tile--ideas"><h3 class="tile__heading tile__heading--ideas">Sport and Activity</h3></div>
-        <div class="tile tile--ideas"><h3 class="tile__heading tile__heading--ideas">Wellnes and Health</h3></div>
-        <div class="tile tile--ideas"><h3 class="tile__heading tile__heading--ideas">Extreme Sports and Expeditions</h3></div>
-        <div class="tile tile--ideas"><h3 class="tile__heading tile__heading--ideas">Games</h3></div>
-        <div class="tile tile--ideas"><h3 class="tile__heading tile__heading--ideas">Culture and Education</h3></div>
-        <div class="tile tile--ideas"><h3 class="tile__heading tile__heading--ideas">Relaxation</h3></div>
-        <div class="tile tile--ideas"><h3 class="tile__heading tile__heading--ideas">Travelling</h3></div>
+        <div class="grid"></div>
     </div>
 </section>
+
+<script type="text/template">
+    <% for (var i = 0; i<images.length; i++) { %>
+        <div class="tile tile--ideas
+        <% if (( i === 5 ) || ( i === 4 )) {%>
+            tile--ideas-width2
+            <%} %>" style = "background: url(<% =images[i].imageurl %>); background-size: cover">
+            <a href="#"><h3 class="tile__heading tile__heading--ideas"><% =images[i].word %></h3></a>
+        </div>
+    <% }; %>
+</script>
 
 <section class="searcher">
     <div class="wrapper">
         <h3 class="section-heading">Discover holiday activity ideas</h3>
         <p class="searcher__desc">Hi! What are your holiday interests?</p>
-        <input type="text" name="" id="" placeholder="Enter your interests">
+        <input class="searcher__input" type="text" name="" id="" placeholder="Enter your interests">
         <a href="#" class="button button--searcher">Search partners</a>
     </div>
 </section>
