--- a/GoIT/markup/js_exam/client_src/template/footer.html
+++ b/GoIT/markup/js_exam/client_src/template/footer.html
@@ -1,23 +1,22 @@
 <footer class="footer">
     <div class="wrapper">
-        <h2 class="footer__title">Urlaubsglück</h2>
+        <a href="#"><h2 class="footer__title">Urlaubsglück</h2></a>
         <div class="company-wrapper">
+            <p class="footer-menu__title">Company</p>
             <ul class="footer-menu">
-                <li class="footer-menu__title"><a href="#" class="">Company</a></li>
-                <li class="footer-menu__item"><a href="#" class="">About</a></li>
-                <li class="footer-menu__item"><a href="#" class="">Contacts</a></li>
-                <li class="footer-menu__item"><a href="#" class="">Press</a></li>
-                <li class="footer-menu__item"><a href="#" class="">Blog</a></li>
+                <li class="footer-menu__item"><a href="#" class="footer-menu__link">About</a></li>
+                <li class="footer-menu__item"><a href="#" class="footer-menu__link">Contacts</a></li>
+                <li class="footer-menu__item"><a href="#" class="footer-menu__link">Press</a></li>
+                <li class="footer-menu__item"><a href="#" class="footer-menu__link">Blog</a></li>
             </ul>
         </div>
         <div class="partners-wrapper">
-            <ul class="footer-menu">
-                <li class="footer-menu__title">Partners</li>
-            </ul>
+            <p class="footer-menu__title">Partners</p>
         </div>
         <div class="designed-by">
             <p class="designed-by__text">Designed by</p>
-            <p class="designed-by__logo"></p>
+            <img class="designed-by__logo" src="img/footer__logo.png">
+            <!-- <p class="designed-by__logo"></p> -->
         </div>
     </div>
 </footer>
