--- a/GoIT/markup/js_exam/client_src/template/footer.html
+++ b/GoIT/markup/js_exam/client_src/template/footer.html
@@ -15,7 +15,7 @@
         </div>
         <div class="designed-by">
             <p class="designed-by__text">Designed by</p>
-            <img class="designed-by__logo" src="img/footer__logo.png">
+            <img class="designed-by__logo" src="img/footer__logo.png" alt="Designer Logo">
         </div>
     </div>
 </footer>
