--- a/GoIT/markup/js_exam/client_src/scss/partials/_footer.scss
+++ b/GoIT/markup/js_exam/client_src/scss/partials/_footer.scss
@@ -14,6 +14,10 @@
         text-transform: uppercase;
 
         color: $auxiliary-color;
+
+        &:hover {
+            color: $additional-text-color;
+        }
     }
 }
 .footer-menu {
@@ -48,6 +52,10 @@
         text-align: center;
 
         color: #666;
+
+        &:hover {
+            color: $auxiliary-color;
+        }
     }
 }
 
